--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "json-server": "^1.0.0-beta.3",
     "next": "16.0.3",
     "react": "19.2.0",
