--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "json-server": "^1.0.0-beta.3",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-paginate": "^8.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
