--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "js-cookie": "^3.0.5",
     "json-server": "^1.0.0-beta.3",
     "next": "16.0.3",
     "react": "19.2.0",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "24.10.1",
     "@types/react": "19.2.5",
     "eslint": "^9",
